Create RECEPTHoken check class and minor changes to display accurate data.

--- a/NIKKEI.ipynb
+++ b/NIKKEI.ipynb
@@ -353,6 +353,185 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chozai</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>birth</th>\n",
+       "      <th>hoken</th>\n",
+       "      <th>hokenNo</th>\n",
+       "      <th>kigo</th>\n",
+       "      <th>bango</th>\n",
+       "      <th>kouhi1</th>\n",
+       "      <th>kouhi_jyu1</th>\n",
+       "      <th>kouhi2</th>\n",
+       "      <th>kouhi_jyu2</th>\n",
+       "      <th>kyufu</th>\n",
+       "      <th>institution</th>\n",
+       "      <th>accept_counts</th>\n",
+       "      <th>prescript_counts</th>\n",
+       "      <th>total</th>\n",
+       "      <th>paid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022/02/01</td>\n",
+       "      <td>90007919</td>\n",
+       "      <td>前田　憲正</td>\n",
+       "      <td>1942/07/25</td>\n",
+       "      <td>公単</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12133526.0</td>\n",
+       "      <td>6006316.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>田幡医院</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1582</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022/02/01</td>\n",
+       "      <td>90008892</td>\n",
+       "      <td>田村　正人</td>\n",
+       "      <td>1949/11/14</td>\n",
+       "      <td>公単</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12133633.0</td>\n",
+       "      <td>7494214.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>東武練馬ｸﾘﾆｯｸ</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>291</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022/02/01</td>\n",
+       "      <td>90008345</td>\n",
+       "      <td>中務　勝史</td>\n",
+       "      <td>1945/03/08</td>\n",
+       "      <td>公単</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12133526.0</td>\n",
+       "      <td>6006910.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>東武練馬ｸﾘﾆｯｸ</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>189</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       chozai        id   name       birth hoken  hokenNo kigo bango  \\\n",
+       "0  2022/02/01  90007919  前田　憲正  1942/07/25    公単      NaN  NaN   NaN   \n",
+       "1  2022/02/01  90008892  田村　正人  1949/11/14    公単      NaN  NaN   NaN   \n",
+       "2  2022/02/01  90008345  中務　勝史  1945/03/08    公単      NaN  NaN   NaN   \n",
+       "\n",
+       "       kouhi1  kouhi_jyu1  kouhi2  kouhi_jyu2  kyufu institution  \\\n",
+       "0  12133526.0   6006316.0     NaN         NaN      0        田幡医院   \n",
+       "1  12133633.0   7494214.0     NaN         NaN      0   東武練馬ｸﾘﾆｯｸ   \n",
+       "2  12133526.0   6006910.0     NaN         NaN      0   東武練馬ｸﾘﾆｯｸ   \n",
+       "\n",
+       "   accept_counts  prescript_counts  total  paid  \n",
+       "0              1                 1   1582     0  \n",
+       "1              1                 1    291     0  \n",
+       "2              1                 1    189     0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(df.head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corp_ins = df.hoken.apply(lambda x:x[:2]).isin( [\"社保\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      False\n",
+       "1      False\n",
+       "2      False\n",
+       "3       True\n",
+       "4       True\n",
+       "       ...  \n",
+       "511    False\n",
+       "512    False\n",
+       "513    False\n",
+       "514    False\n",
+       "515    False\n",
+       "Name: hoken, Length: 516, dtype: bool"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corp_ins"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
